<resources>
    <string name="app_name">POS</string>
    <string name="title_home">Home</string>
    <string name="title_printer">Printer</string>
    <string name="title_profile">Profile</string>
    <string name="welcome">Welcome!</string>
    <string name="login_welcome_msg">Login into your account</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="login_fb">login fb</string>
    <string name="login_google">login google</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="signup_display_msg">Create your new account to get all features</string>
    <string name="signup">SignUp</string>
    <string name="terms_and_conditions">By pressing \'SignUp\' you agree to our terms and conditions</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password!</string>
    <string name="merchant_address">Merchant Address</string>
    <string name="region">Region/City</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="register_branch">Register Branch</string>
    <string name="back_btn">back btn</string>
    <string name="username_id">Username Id</string>
    <string name="reset_password">Reset Password</string>
    <string name="tag_line">\@2021 Powered by EXTRA INCH Technologies Ltd</string>
    <string name="created_successfully">Created Successfully</string>
    <string name="gif">gif</string>
    <string name="ic">ic</string>
    <string name="inventory">Inventory</string>
    <string name="sales_expenses">Sales / Expenses</string>
    <string name="orders">Orders</string>
    <string name="report">Reports</string>
    <string name="stock_transfer">Stock Transfer</string>
    <string name="title_activity_sales_and_expenses">SalesAndExpenses</string>
    <string name="tab_text_1">Sales</string>
    <string name="tab_text_2">Expenses</string>
    <string name="sales_n_expenses"><![CDATA[Sales & Expenses]]></string>
    <string name="float_btn">float btn</string>
    <string name="notification">Notifications</string>
    <string name="shop_name">Shop Name</string>
    <string name="notification_title">Notification title</string>
    <string name="let_s_setup_new_branch">Let\'s setup a new branch</string>
    <string name="branch_name">Branch Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="title_activity_inventory_main">Inventory Management</string>
    <string name="add_product">Add Product</string>
    <string name="save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="unit_price_ksh">Unit Price (Ksh)</string>
    <string name="purchase_price_ksh">Purchase Price (Ksh)</string>
    <string name="quantity">Quantity</string>
    <string name="product_description">Product Description</string>
    <string name="re_order_level">Re-Order Level</string>
    <string name="view_product_category">Example Product Category</string>
    <string name="add_new">Add New</string>
    <string name="add_category">Add Product Category</string>
    <string name="category_name">Category name</string>
    <string name="add_remarks">Add remarks</string>

    <string name="inventory_tab_1">Category</string>
    <string name="inventory_tab_2">Supplier</string>
    <string name="inventory_tab_3">Product</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_address">Supplier Address</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="personal_info">Personal Info</string>
    <string name="merchant_name">Merchant Name:</string>
    <string name="location">Location:</string>
    <string name="merchant">Merchant</string>
    <string name="unit_of_measure_eg_kgs_or_g">Unit of Measure, eg Kgs or g</string>
    <string name="country">Country</string>
    <string name="add_merchant">Add Merchant</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_orders">OrdersActivity</string>

    <string name="orders_tab_text_1">Orders</string>
    <string name="orders_tab_text_2">Purchase</string>
    <string name="title_customers">Customers</string>
    <string name="add_customer">Add Customers</string>
    <string name="first_name">First Name</string>
    <string name="other_name">Other Name</string>
    <string name="create_customer">Create Customer</string>
    <string name="select_item">Select client type</string>
    <string name="orders_amp_quote"><![CDATA[Orders & Purchase]]></string>
    <string name="address">Address</string>
    <string name="remarks">Remarks</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="units">Units:</string>
    <string name="g_kgs">g/kgs</string>
    <string name="status">Status</string>
    <string name="level">Level</string>
    <string name="category">Category</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="user">User</string>
    <string name="create_order">Create Order</string>
    <string name="order_date">Order Date</string>
    <string name="_2021_01_01">2021–01–01</string>
    <string name="required_date">Required Date</string>
    <string name="discount">% Discount</string>
    <string name="total_due_ksh">Total due (Ksh)</string>
    <string name="order_no">Order NO</string>
    <string name="cdrd">CDRD</string>
    <string name="shipping_date">Shipping Date</string>
    <string name="customer">Customer</string>
    <string name="unit_cost_ksh">Unit cost (Ksh.)</string>
    <string name="_0_0">0.0</string>
    <string name="total_order_ksh">Total Order (Ksh.)</string>
    <string name="goods_return">Return Goods</string>
    <string name="title_activity_inwards_outwards">InwardsOutwardsActivity</string>
    <string name="inwards_outwards_returns">Return Goods</string>

    <string name="tab_inwards_1">Inwards</string>
    <string name="tab_outwards_2">Outwards</string>
    <string name="add_return_inwards">Add Return Inwards</string>
    <string name="merchant_branch">Merchant Branch</string>
    <string name="date_delivered">Date Delivered</string>
    <string name="returned_quantity">Returned Quantity</string>
    <string name="returned_reason">Returned Reason</string>
    <string name="add_returned_outwards">Add Return Outwards</string>
    <string name="create_return_inwards">Create Return Inwards</string>
    <string name="create_return_outwards">Create Return Outwards</string>
    <string name="returned_date">Returned Date</string>
    <string name="payment_type">Payment Type</string>
    <string name="merchant_branch_list">Merchant Branch List</string>
    <string name="ordered_quantity">Ordered Quantity</string>
    <string name="name">Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="merchant_type">Merchant Type</string>
    <string name="modify_merchant">Modify Merchant</string>
    <string name="unit_measure">Unit Measure</string>
    <string name="create_purchase">Create Purchase</string>
    <string name="received_date">Received Date</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_due_date">Amount Due Date</string>
    <string name="payment_status">Payment Status</string>
    <string name="amount_due">Amount Due</string>
    <string name="purchase_receipt">Purchase Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="received_quantity">Received Quantity</string>
    <string name="set_your_display_message">Set your display message</string>
    <string name="ok">OK</string>
    <string name="requested_date">Requested Date</string>
    <string name="purchase_status">Purchase Status</string>
    <string name="total_cost_kes">Total Cost (KES)</string>
    <string name="no_receipts_yet">No receipts yet…</string>
    <string name="there_is_no_item_to_display_yet">There is no item to display yet!</string>
    <string name="modify_product_category">Modify Product Category</string>
    <string name="modify_supplier">Modify Supplier</string>
    <string name="modify_product">Modify Product</string>
    <string name="purchase">Purchase</string>
    <string name="products">Products</string>
    <string name="product_category">Product Category</string>
    <string name="purchase_order">Purchase order</string>
    <string name="logout">LogOut</string>
    <string name="setup_merchant_details">It seems you have not setup Merchant Details, Click OK to proceed!</string>
    <string name="modify_order">Modify Order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="purchased_date">Purchased Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="create_inventory">Create Inventory</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="modify_inventory">Modify Inventory</string>
    <string name="modify_purchase">Modify Purchase</string>

</resources>